--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
 				display: block;
 				margin: 10px auto 15px auto;
 			}
+
+			.madeby {
+				font-size: 0.5em;
+			}
 		}
 	</style>
 </head>
