--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html manifest="cache.manifest">
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, user-scalable=no" />
 	<title>Nädalakalkulaator</title>
-	<link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css" />
 	<style type="text/css">
+		@font-face {
+			font-family: 'Roboto';
+			font-style: normal;
+			font-weight: 400;
+			src: local('Roboto Regular'),
+				local('Roboto-Regular'),
+				url(roboto_regular.woff2) format('woff2');
+			unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC,
+				U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+		}
+
 		body, html {
 			font-family: "Roboto", sans-serif;
 			font-size: 16px;
